sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/SC_Slack_Log__c.object-meta.xml
<CustomObject>
    <label>SC Slack Log</label>
    <nameField>
        <displayFormat>SLACKLOG-{00000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Slack Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>