sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <description>Canal ou destinatário do Slack (canal público ou mensagem directa) para onde esta notificação foi enviada. Escrito automaticamente pela classe SC_SlackNotifier a cada callout.</description>
    <label>Canal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>