sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Erro__c.field-meta.xml
<CustomField>
    <fullName>Erro__c</fullName>
    <description>Mensagem de erro devolvida pelo Slack quando o envio desta notificação falha. Fica vazio quando o envio é bem-sucedido. Escrito automaticamente pela classe SC_SlackNotifier a cada callout.</description>
    <label>Erro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>