sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <description>Evento de negócio que originou esta notificação, por exemplo negócio ganho, negócio perdido ou pedido de aprovação. Escrito automaticamente pela classe SC_SlackNotifier a cada callout.</description>
    <label>Evento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>