sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <description>Texto completo enviado para o Slack nesta notificação. Escrito automaticamente pela classe SC_SlackNotifier a cada callout.</description>
    <label>Mensagem</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>