sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Código HTTP devolvido pela API do Slack na resposta a este envio, usado para diagnosticar falhas de callout. Escrito automaticamente pela classe SC_SlackNotifier.</description>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>