sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/fields/Sucesso__c.field-meta.xml
<CustomField>
    <fullName>Sucesso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o envio desta notificação para o Slack foi concluído com sucesso. Escrito automaticamente pela classe SC_SlackNotifier a cada callout.</description>
    <label>Sucesso</label>
    <type>Checkbox</type>
</CustomField>