sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/listViews/DMs_Aprovadores.listView-meta.xml
<ListView>
    <fullName>DMs_Aprovadores</fullName>
    <columns>NAME</columns>
    <columns>Evento__c</columns>
    <columns>Canal__c</columns>
    <columns>Sucesso__c</columns>
    <columns>Erro__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>aprov-l1-dm,aprov-l2-dm</value>
    </filters>
    <label>DMs a aprovadores</label>
</ListView>