sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/listViews/Falhas.listView-meta.xml
<ListView>
    <fullName>Falhas</fullName>
    <columns>NAME</columns>
    <columns>Evento__c</columns>
    <columns>Canal__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Erro__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sucesso__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Falhas</label>
</ListView>