sinalcabo/force-app/main/default/objects/SC_Slack_Log__c/listViews/Fecho_Comercial.listView-meta.xml
<ListView>
    <fullName>Fecho_Comercial</fullName>
    <columns>NAME</columns>
    <columns>Evento__c</columns>
    <columns>Sucesso__c</columns>
    <columns>Canal__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>won,lost,cancelada</value>
    </filters>
    <label>Fecho comercial</label>
</ListView>